--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 aiohttp = "^3.11.11"
+pydantic-settings = "^2.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
